name:                acme-whose
version:             0.1.0
synopsis:            @Data.These@ for polisci
license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           (c) 2013 Joseph Abrahamson
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Acme.Whose
  build-depends:       base >=4.6 && <4.7
                     , strict
                     , bifunctors
  hs-source-dirs:      src
  default-language:    Haskell2010